--- a/index.html
+++ b/index.html
@@ -1556,6 +1556,72 @@ frameborder="0">
     }
 }
 
+/* MOBILE */
+
+@media(max-width:900px){
+    .about-columns{
+        flex-direction:column;
+    }
+
+    .about-block h2{
+        font-size:28px;
+    }
+}
+
+/* MOBILE FIX */
+@media(max-width:768px){
+
+.hero,
+.services-section,
+.hair-section,
+.color-section,
+.spa-section,
+.lash-section,
+.brow-section,
+.price-section,
+.lux-gallery-section,
+.about-section{
+    height:auto;
+    min-height:100vh;
+    padding:80px 0;
+}
+
+.frame,
+.services-frame,
+.hair-frame,
+.color-frame,
+.spa-frame,
+.lash-frame,
+.brow-frame,
+.price-frame,
+.lux-gallery-frame,
+.about-frame{
+    inset:20px;
+}
+
+h1{
+    font-size:32px;
+}
+
+.services-content h2,
+.hair-text h2,
+.color-text h2,
+.spa-text h2,
+.lash-text h2,
+.brow-text h2,
+.price-content h2,
+.lux-gallery-content h2{
+    font-size:28px;
+}
+
+.slide-track img{
+    width:180px;
+    height:260px;
+}
+
+}
+    
 </style>
 </body>
 </html>
+
